尝试兼容nkmot